Update Dockerfiles for running frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,12 @@ services:
 
   frontend:
     build: ./foodplanner-frontend
+    volumes:
+      - ./foodplanner-frontend:/app
+      - /app/node_modules
     ports:
-      - "3000:80"
-    depends_on:
-      - backend
+      - "3000:3000"
+    command: npm start
 
   db:
     image: postgres:15
