--- a/foodplanner-frontend/Dockerfile
+++ b/foodplanner-frontend/Dockerfile
@@ -1,9 +1,6 @@
-FROM node:24 as build
+FROM node:24
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+CMD ["npm", "run", "dev"]
